<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:robobunny="http://robobunny.com"
	android:title="@string/settings_interface">

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="unread_count"
		android:title="@string/unread_count"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="separate_retweet_action"
		android:summary="@string/separate_retweet_action_summary"
		android:title="@string/separate_retweet_action"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="bottom_send_button"
		android:title="@string/bottom_send_button"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="bottom_compose_button"
		android:summary="@string/bottom_compose_button_summary"
		android:title="@string/bottom_compose_button"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:dependency="bottom_compose_button"
		android:key="leftside_compose_button"
		android:summary="@string/leftside_compose_button_summary"
		android:title="@string/leftside_compose_button"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="fast_scroll_thumb"
		android:title="@string/fast_scroll_thumb"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="disable_tab_swipe"
		android:title="@string/disable_tab_swipe"/>

	<PreferenceCategory
		android:key="cat_dual_pane_layout"
		android:title="@string/dual_pane_layout">
		<CheckBoxPreference
			android:defaultValue="@bool/is_large_screen"
			android:key="dual_pane_in_portrait"
			android:title="@string/portrait"/>
		<CheckBoxPreference
			android:defaultValue="@bool/is_large_screen"
			android:key="dual_pane_in_landscape"
			android:title="@string/landscape"/>
	</PreferenceCategory>

</PreferenceScreen>