<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/theme">

	<Preference
		android:key="header"
		android:layout="@layout/wizard_page_cards_header"
		android:selectable="false"/>

	<PreferenceCategory
		android:key="cat_status_preview"
		android:title="@string/preview">
		<org.mariotaku.twidere.preference.StatusPreviewPreference android:key="status_preview"/>
	</PreferenceCategory>

	<org.mariotaku.twidere.preference.SeekBarDialogPreference
		android:defaultValue="@integer/default_text_size"
		android:key="text_size_int"
		android:summary="@string/text_size_summary"
		android:title="@string/text_size"
		app:max="24"
		app:min="12"
		app:progressTextSuffix="sp"/>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="name_first"
		android:title="@string/name_first"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="nickname_only"
		android:summary="@string/nickname_only_summary"
		android:title="@string/nickname_only"/>
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="display_profile_image"
		android:summary="@string/image_load_summary"
		android:title="@string/display_profile_image"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="display_image_preview"
		android:summary="@string/image_load_summary"
		android:title="@string/display_image_preview"/>

	<org.mariotaku.twidere.preference.LinkHighlightPreference
		android:defaultValue="none"
		android:key="link_highlight_option"
		android:summary="%s"
		android:title="@string/link_highlight_option"/>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="indicate_my_status"
		android:title="@string/indicate_my_status"/>
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="show_absolute_time"
		android:summary="@string/show_absolute_time_summary"
		android:title="@string/show_absolute_time"/>
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="card_animation"
		android:title="@string/card_animation"/>

	<org.mariotaku.twidere.preference.WizardPageNavPreference
		android:key="next_page"
		android:title="@string/next"/>

</PreferenceScreen>