<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="settings_content"
	android:title="@string/content">

	<EditTextPreference
		android:defaultValue="RT @[NAME]: [TEXT]"
		android:dialogTitle="@string/quote_format"
		android:key="quote_format"
		android:singleLine="true"
		android:summary="@string/quote_format_summary"
		android:title="@string/quote_format"/>

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="load_more_automatically"
		android:summary="@string/load_more_automatically_summary"
		android:title="@string/load_more_automatically"/>

	<org.mariotaku.preference.SeekBarPreference
		maxValue="200"
		minValue="10"
		android:defaultValue="20"
		android:key="load_item_limit"
		android:summary="@string/load_item_limit_summary"
		android:title="@string/load_item_limit"/>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="remember_position"
		android:summary="@string/remember_position_summary"
		android:title="@string/remember_position"/>

	<org.mariotaku.twidere.preference.TrendsLocationPreference
		android:key="trends_location"
		android:summary="@string/trends_location_summary"
		android:title="@string/trends_location"/>

</PreferenceScreen>