<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="settings_refresh_and_notifications"
	android:title="@string/refresh_and_notifications">

	<PreferenceCategory
		android:key="category_refresh"
		android:title="@string/refresh">
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="auto_refresh"
			android:title="@string/auto_refresh"/>

		<ListPreference
			android:dependency="auto_refresh"
			android:entries="@array/entries_refresh_interval"
			android:entryValues="@array/values_refresh_interval"
			android:key="refresh_interval"
			android:summary="@string/refresh_interval_summary"
			android:title="@string/refresh_interval"/>

		<org.mariotaku.twidere.preference.AutoRefreshContentPreference
			android:dependency="auto_refresh"
			android:key="refresh_content"
			android:title="@string/content_to_refresh"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:dependency="auto_refresh"
			android:key="stop_auto_refresh_when_battery_low"
			android:title="@string/stop_auto_refresh_when_battery_low"/>

		<org.mariotaku.twidere.preference.HomeRefreshContentPreference
			android:key="home_refresh"
			android:title="@string/home_refresh"/>

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="refresh_on_start"
			android:summary="@string/refresh_on_start_summary"
			android:title="@string/refresh_on_start"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="refresh_after_tweet"
			android:summary="@string/refresh_after_tweet_summary"
			android:title="@string/refresh_after_tweet"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_notifications"
		android:title="@string/notifications">
		<org.mariotaku.twidere.preference.NotificationContentPreference
			android:key="notification_content"
			android:title="@string/content_to_nofity"/>

		<org.mariotaku.twidere.preference.NotificationTypePreference
			android:key="notifications_type"
			android:summary="@string/notifications_type_summary"
			android:title="@string/notifications_type"/>

		<org.mariotaku.twidere.preference.RingtonePreference
			android:defaultValue=""
			android:key="notification_ringtone"
			android:title="@string/notification_ringtone"/>

		<org.mariotaku.twidere.preference.ColorPickerPreference
			android:defaultValue="@android:color/holo_blue_dark"
			android:key="notification_light_color"
			android:title="@string/notification_light_color"/>

		<org.mariotaku.twidere.preference.SilentNotificationsPreference
			android:key="silent_notifications"
			android:summary="@string/silent_notifications_summary"
			android:title="@string/silent_notifications"/>

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="background_toast_notification"
			android:summary="@string/background_toast_notification_summary"
			android:title="@string/background_toast_notification"/>
	</PreferenceCategory>

</PreferenceScreen>