<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@id/reply"
		android:icon="@drawable/ic_menu_reply"
		android:title="@string/reply"/>
	<item
		android:id="@+id/retweet_submenu"
		android:icon="@drawable/ic_menu_retweet"
		android:title="@string/retweet">
		<menu>
			<item
				android:id="@id/retweet"
				android:icon="@drawable/ic_menu_retweet"
				android:title="@string/retweet"/>
			<item
				android:id="@id/quote"
				android:icon="@drawable/ic_menu_quote"
				android:title="@string/quote"/>
		</menu>
	</item>
	<item
		android:id="@id/favorite"
		android:icon="@drawable/ic_menu_star"
		android:title="@string/favorite"/>
	<item
		android:id="@+id/more_submenu"
		android:icon="@drawable/ic_menu_more"
		android:title="@string/more">
		<menu>
			<item
				android:id="@id/share"
				android:icon="@drawable/ic_menu_share"
				android:title="@string/share"/>
			<item
				android:id="@id/copy"
				android:icon="@drawable/ic_menu_copy"
				android:title="@string/copy"/>
			<item
				android:id="@id/extensions"
				android:icon="@drawable/ic_menu_extension"
				android:title="@string/extensions"/>
			<item
				android:id="@id/mute_source"
				android:icon="@drawable/ic_menu_mute"
				android:title="@string/mute_source"/>
			<item
				android:id="@+id/set_color_submenu"
				android:icon="@drawable/ic_menu_color_palette"
				android:title="@string/set_color">
				<menu>
					<item
						android:id="@id/set_color"
						android:icon="@drawable/ic_menu_color_palette"
						android:title="@string/set_color"/>
					<item
						android:id="@id/clear_color"
						android:icon="@drawable/ic_menu_close_clear_cancel"
						android:title="@string/clear"/>
				</menu>
			</item>
			<item
				android:id="@+id/delete_submenu"
				android:icon="@drawable/ic_menu_delete"
				android:title="@string/delete"
				android:visible="false">
				<menu>
					<item
						android:id="@id/delete"
						android:icon="@drawable/ic_menu_delete"
						android:title="@string/delete"/>
					<item
						android:icon="@drawable/ic_menu_close_clear_cancel"
						android:title="@android:string/cancel"/>
				</menu>
			</item>
		</menu>
	</item>

</menu>
